--- a/AvraamProject/AvraamProject.Android/AvraamProject.Android.csproj
+++ b/AvraamProject/AvraamProject.Android/AvraamProject.Android.csproj
@@ -162,5 +162,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\ic_launcher_foreground.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\search.svg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
