--- a/AvraamProject/AvraamProject.Android/AvraamProject.Android.csproj
+++ b/AvraamProject/AvraamProject.Android/AvraamProject.Android.csproj
@@ -121,7 +121,7 @@
     <AndroidResource Include="Resources\drawable\shop.svg" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\pano.jpg" />
+    <AndroidResource Include="Resources\drawable\pano1.jpg" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\place1_1.jpg" />
@@ -164,6 +164,18 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\search.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\lowpano1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\transparent.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\lowpano2.jpg" />
+    <AndroidResource Include="Resources\drawable\lowpano3.jpg" />
+    <AndroidResource Include="Resources\drawable\pano2.jpg" />
+    <AndroidResource Include="Resources\drawable\pano3.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
