Added favorite icon

--- a/AvraamProject/AvraamProject.Android/AvraamProject.Android.csproj
+++ b/AvraamProject/AvraamProject.Android/AvraamProject.Android.csproj
@@ -180,5 +180,9 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\lowpano2.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\starfull.svg" />
+    <AndroidResource Include="Resources\drawable\star.svg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
