Added about page
- Added info about application

--- a/AvraamProject/AvraamProject.Android/AvraamProject.Android.csproj
+++ b/AvraamProject/AvraamProject.Android/AvraamProject.Android.csproj
@@ -234,5 +234,16 @@
     <AndroidResource Include="Resources\drawable\lowplace9_2.jpg" />
     <AndroidResource Include="Resources\drawable\lowplace9_3.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\github.svg" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\info.svg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties XamarinHotReloadDebuggerTimeoutExceptionAvraamProjectAndroidHideInfoBar="True" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
